tests/baselines/reference/arrayBindingPatternOmittedExpressions.errors.txt
arrayBindingPatternOmittedExpressions.ts(4,22): error TS2454: Variable 'results' is used before being assigned.


==== arrayBindingPatternOmittedExpressions.ts (1 errors) ====
    var results: string[];
    
    {
        let [, b, , a] = results;
                         ~~~~~~~
!!! error TS2454: Variable 'results' is used before being assigned.
        let x = {
            a,
            b
        }
    }
    
    
    function f([, a, , b, , , , s, , , ] = results) {
        a = s[1];
        b = s[2];
    }